--- a/About.html
+++ b/About.html
@@ -81,5 +81,86 @@
         </div>
       </div>
     </section>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- custom js file -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        let menu = document.querySelector("#menu-bars");
+        let navbar = document.querySelector(".navbar");
+
+        menu.onclick = () => {
+          menu.classList.toggle("fa-times");
+          navbar.classList.toggle("active");
+        };
+
+        window.onscroll = () => {
+          menu.classList.remove("fa-times");
+          navbar.classList.remove("active");
+        };
+
+        document.querySelector("#search-icon").onclick = () => {
+          document.querySelector("#search-form").classList.toggle("active");
+        };
+
+        document.querySelector("#close").onclick = () => {
+          document.querySelector("#search-form").classList.remove("active");
+        };
+      });
+      var homeSwiper = new Swiper(".home-slider", {
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+          delay: 7500,
+          disableOnInteraction: false,
+        },  
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        loop: true,
+      });
+      var swiperReview = new Swiper(".swiper-container-review-slider", {
+  spaceBetween: 20,
+  centeredSlides: true,
+  autoplay: {
+    delay: 7500,
+    disableOnInteraction: false,
+  },
+  loop: true,
+  breakpoints: {
+    0: {
+      slidesPerView: 1,
+    },
+    640: {
+      slidesPerView: 2,
+    },
+    768: {
+      slidesPerView: 2,
+    },
+    1024: {
+      slidesPerView: 3,
+    },
+  },
+});
+
+document.addEventListener("DOMContentLoaded", function () {
+  // ... (kode sebelumnya)
+
+  const boxes = document.querySelectorAll('.Dishes .box');
+
+  boxes.forEach(box => {
+    box.addEventListener('click', function () {
+      this.classList.add('moveUp');
+
+      this.addEventListener('animationend', () => {
+        this.classList.remove('moveUp');
+      });
+    });
+  });
+});
+
+    </script>
+
   </body>
 </html>
